# blackjack

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  blackjack-v2 - Shortcut.lnk  blackjack.py  main.py  multideck.py  players.py  pyproject.toml  requirements.txt
.github/workflows/: application-tests.yaml  tests.yaml
blackjack/: __init__.py  __main__.py  constants.py  deck.py  game.py  multideck.py  participants.py  players.py  ranks.toml  rules.py  suits.toml
docs/: todo-list.md
src/blackjack/: __init__.py  __main__.py  constants.py  deck.py  game.py  participants.py  rules.py
tests/: conftest.py  test__deck.py  test__e2e.py  test__game.py  test__participants.py
tests/e2e/: test__e2e.py
tests/unit/: test__deck.py  test__game.py  test__participants.py  test__rules.py
