[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "blackjack"
version = "0.0.0"
description = "Implementing Blackjack, also called 21."
readme = "README.md"
authors = ["Bilbottom"]
repository = "https://github.com/Bilbottom/blackjack"
packages = [{include = "blackjack"}]

[tool.poetry.scripts]
blackjack = "blackjack.__main__:main"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group]
dev.optional = false
test.optional = false

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.3.0"
pylint = "^2.17.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.pytest.ini_options]
addopts = "--cov=blackjack --cov-report term-missing"
testpaths = [
    "tests",
]


[tool.isort]
profile = "black"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
ignore-paths = "^tests/.*$"
disable = ["no-else-return", "no-else-raise"]
